infra/gitops/kustomize/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: advancia
  labels:
    name: advancia
    environment: base
